<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/tv_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/textView"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/join_name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_join" />

    <EditText
        android:id="@+id/join_id"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_id"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/join_name"
        app:layout_constraintTop_toBottomOf="@+id/join_name" />

    <Button
        android:id="@+id/btn_check"
        style="@style/defaultButton"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:text="@string/btn_check"
        app:layout_constraintBottom_toBottomOf="@+id/join_id"
        app:layout_constraintStart_toEndOf="@+id/join_id" />

    <EditText
        android:id="@+id/join_pw"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/join_id"
        app:layout_constraintTop_toBottomOf="@+id/join_id" />

    <EditText
        android:id="@+id/join_pwck"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_pwck"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/join_pw"
        app:layout_constraintStart_toStartOf="@+id/join_pw"
        app:layout_constraintTop_toBottomOf="@+id/join_pw" />

    <Button
        android:id="@+id/btn_join"
        style="@style/defaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/btn_join"
        app:layout_constraintStart_toStartOf="@+id/join_pwck"
        app:layout_constraintTop_toBottomOf="@+id/join_pwck" />

    <Button
        android:id="@+id/btn_del"
        style="@style/defaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_del"
        app:layout_constraintEnd_toEndOf="@+id/join_pwck"
        app:layout_constraintTop_toTopOf="@+id/btn_join" />


</androidx.constraintlayout.widget.ConstraintLayout>